--- a/css/mobile.css
+++ b/css/mobile.css
@@ -101,6 +101,33 @@
 	
 }
 
+@media screen and (max-width: 1055px) {
+	/*--------------------
+				Committee
+	--------------------*/
+	#committee .section-head {
+		margin: 0 20px;
+	}
+
+	#committee .columns {
+		flex-direction: column;
+		padding: 20px 20px 0 20px;
+	}
+
+	#committee .columns .left, #committee .columns .right {
+		width: 100%;
+		margin: 0;
+	}
+
+	#committee .columns .right .member:first-child {
+		margin-top: 0;
+	}
+
+	#committee .columns .member .title {
+		font-size: 15px;
+	}
+}
+
 /* For more compressed elements */
 
 @media screen and (max-width: 1000px) { 
@@ -149,26 +176,10 @@
 	.school-tile .description {
 		padding: 25px 0 15px 0;
 	}
+}
 
-	/*--------------------
-				Committee
-	--------------------*/
-
-	#committee .columns {
-		flex-direction: column;
-		padding: 20px 30px 0 30px;
-	}
-
-	#committee .columns .left, #committee .columns .right {
-		width: 100%;
-		margin: 0;
-	}
-
-	#committee .columns .right .member:first-child {
-		margin-top: 0;
-	}
-
-	#committee .columns .member .title {
-		font-size: 15px;
+@media screen and (max-width: 430px) {
+	#committee .columns .members {
+		display: block;
 	}
 }
