--- a/css/mobile.css
+++ b/css/mobile.css
@@ -62,7 +62,7 @@
 	}
 
 	.jumbo .cta {
-		margin: 0 0 50px 0;
+		margin: 0 0 35px 0;
 		flex-direction: column;
 	}
 
@@ -183,8 +183,12 @@
 	}
 }
 
-@media screen and (max-width: 430px) {
-	#committee .columns .members {
-		display: block;
+@media screen and (max-width: 370px) {
+	#committee .columns .members, #committee .columns .member {
+		flex-direction: column;
+	}
+
+	#committee .columns .member .title, #committee .columns .members .title {
+		margin-bottom: 10px;
 	}
 }
