--- a/css/call-for-submissions.css
+++ b/css/call-for-submissions.css
@@ -48,14 +48,14 @@ main p {
 	margin: 0;
 }
 
-#abstracts .p-btn-head {
+.p-btn-head {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
 }
 
 
-#abstracts .p-btn-head .cta-button {
+.p-btn-head .cta-button {
 	margin: 0;
 	display: inline-block;
 	padding: 12px 25px;
@@ -76,12 +76,12 @@ main p {
 
 @media screen and (max-width: 550px) {
 
-	#abstracts .p-btn-head {
+	.p-btn-head {
 		flex-direction: column;
 		align-items: stretch;
 	}
 	
-	#abstracts .p-btn-head .cta-button {
+	.p-btn-head .cta-button {
 		margin: 0;
 		padding: 12px 25px;
     text-align: center;
