--- a/mic-site/public/stylesheets/travel-form.css
+++ b/mic-site/public/stylesheets/travel-form.css
@@ -67,7 +67,7 @@ main p {
 	font-size: 16px;
 }
 
-main form .form-group input[type="text"], main form .form-group input[type="tel"] {
+main form .form-group input[type="text"], main form .form-group input[type="tel"], main form .form-group input[type="email"] {
 	margin: 10px 0;
 	padding: 5px 10px;
 	border: 1px solid #ccc;
