Finished migration to an Express app

--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -48,7 +48,7 @@ html(lang="en")
 							| The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to democratize machine intelligence, promote diversity, build community, and inspire the next generation of researchers and engineers.
 						p
 							strong Please note: 
-							|  There is a limit of 400 attendees to this inaugural conference. Student sign-ups will be prioritized and non .edu emails will not receive a confirmation email, but will not lose a place in the sign-up queue.
+							|  There is a limit of 300 attendees to this inaugural conference. Student sign-ups will be prioritized and non .edu emails will not receive a confirmation email, but will not lose a place in the sign-up queue. Attendees must be 18 years of age or older - attendees in high school will be asked to show a photo ID.
 					.about-mic
 						h3 The Machine Intelligence Community - MIC
 						p
