--- a/mic-site/views/travel-form/completed.pug
+++ b/mic-site/views/travel-form/completed.pug
@@ -10,4 +10,6 @@ html(lang="en")
 			a(href="/")
 				img(src="images/mic-logo.png" alt="MIC Logo")
 		main
-			p(style="text-align:center") The form has been submitted. We will be in touch to confirm any arrangments, thank you for your time.
+			p(style="text-align:center") The form has been submitted. We will be in touch to confirm any arrangments, thank you for your time. Feel free to reach out to 
+				a(href="mailto:conference@machineintelligence.cc") conference@machineintelligence.cc 
+				| if you have any questions or concerns.
