--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -21,7 +21,7 @@ html(lang="en")
 				li
 					a(href="#committee") Conference Committee
 			.cta
-				a.cta-button(href="https://bumic.typeform.com/to/eVgtGg") Attend
+				a.cta-button(href="https://bumic.typeform.com/to/eVgtGg") Apply to Attend
 				a.cta-button(href="mailto:sponsors@machineintelligence.cc") Become a Sponsor
 		main
 			#particles-js
@@ -36,7 +36,7 @@ html(lang="en")
 							.sub-heading
 								h2 Nov. 3rd, 2018 - 6th Floor of MIT Media Lab
 					.cta
-						a.cta-button(href="https://bumic.typeform.com/to/eVgtGg") Attend
+						a.cta-button(href="https://bumic.typeform.com/to/eVgtGg") Apply to Attend
 						a.cta-button(href="/call-for-submissions") Call for Submissions
 			section#about
 				.container
@@ -48,7 +48,7 @@ html(lang="en")
 							| The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to democratize machine intelligence, promote diversity, build community, and inspire the next generation of researchers and engineers.
 						p
 							strong Please note: 
-							|  There is a limit of 300 attendees to this inaugural conference. Student sign-ups will be prioritized and non .edu emails will not receive a confirmation email, but will not lose a place in the sign-up queue. Attendees must be 18 years of age or older - attendees in high school will be asked to show a photo ID.
+							| There is a limit of 350 attendees to this inaugural conference. Student applications will be prioritized and non .edu emails will not receive a confirmation email, but will not lose a place in the application queue. Attendees must be 18 years of age or older - attendees in high school will be asked to show a photo ID.
 					.about-mic
 						h3 The Machine Intelligence Community - MIC
 						p
@@ -172,7 +172,7 @@ html(lang="en")
 						.logo
 							img(src="images/mic-logo.png" alt="MIC Conference Logo")
 						.cta
-							a.cta-button(href="https://bumic.typeform.com/to/eVgtGg") Attend
+							a.cta-button(href="https://bumic.typeform.com/to/eVgtGg") Apply to Attend
 					.bottom
 						p.copyright © Copyright 2018
 						a.code-of-conduct(href="http://confcodeofconduct.com/")  Conference Code of Conduct
