Added application acceptance timeline

--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -47,7 +47,10 @@ html(lang="en")
 						p
 							| The Machine Intelligence Conference will be held annually by all constituent MIC schools. Our mission for this conference is to democratize machine intelligence, promote diversity, build community, and inspire the next generation of researchers and engineers.
 						p
-							strong Please note: 
+							strong Application Timeline: 
+							| Due to an exciting amount of interest and an unfortunate lack of space we will not be able to accept every attendee application. To ensure as many people as possible can attend, we are accepting applications on a rolling basis. The first round of acceptances will be sent out <strong> September 15th</strong> and confirmation responses are due <strong>September 22nd</strong>. The second round of acceptances will be sent out <strong>September 23rd</strong> and confirmation responses are due <strong>September 30th</strong>. If there are still spots available after the second round, we will allow a limited number of walk-ons day of the conference. Please be aware that if you are accepted but do not confirm your spot will be given to another. 
+						p
+							strong Please Note: 
 							| There is a limit of 350 attendees to this inaugural conference. Student applications will be prioritized and non .edu emails will not receive a confirmation email, but will not lose a place in the application queue. Attendees must be 18 years of age or older - attendees in high school will be asked to show a photo ID.
 					.about-mic
 						h3 The Machine Intelligence Community - MIC
