--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -168,6 +168,9 @@ html(lang="en")
 							.member
 								.title Sponsorship Chair
 								.name Charles Ma
+							.member
+								.title Community Outreach and Logistics Chair
+								.name Mateo Guaman
 		footer
 			.container
 				.rows
