Updated abstract submission date

--- a/mic-site/views/call-for-submissions.pug
+++ b/mic-site/views/call-for-submissions.pug
@@ -17,7 +17,7 @@ html(lang="en")
 				p
 					| Machine Intelligence Conference 2018 invites students to submit research on machine intelligence to our inaugural conference. The goal of MIC 2018 is to provide students with a forum for sharing their work with other students, meet peers with related academic interests, and build community. The conference is open to those in industry and students in undergraduate, masters, and doctoral programs. Accepted abstracts will advance to the conference track for the poster session.
 				p
-					| Submissions for the abstract and conference tracks should be in PDF format, and be submitted no later than September 1st, and October 1st respectively. There is a strict one submission limit to the MIC 2018 Abstract and Conference Tracks.
+					| Submissions for the abstract and conference tracks should be in PDF format, and be submitted no later than September 15th, and October 1st respectively. There is a strict one submission limit to the MIC 2018 Abstract and Conference Tracks.
 				p
 					| Please contact us if you have questions about registration or need clarification on submissions:
 				#contact-info
