--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -158,10 +158,10 @@ html(lang="en")
 							.member
 								.title Website Coordinator
 								.name Devin de Hueck
-						.right
 							.member
 								.title Finance Coordinator
 								.name Isaac Wolverton
+						.right
 							.member
 								.title Diversity Scholarship Chair
 								.name Chloe Kaubisch
@@ -171,6 +171,9 @@ html(lang="en")
 							.member
 								.title Community Outreach and Logistics Chair
 								.name Mateo Guaman
+							.member
+								.title Branding
+								.name Tammy Qiu
 		footer
 			.container
 				.rows
