--- a/mic-site/views/sponsor-form/completed.pug
+++ b/mic-site/views/sponsor-form/completed.pug
@@ -1,6 +1,6 @@
 html(lang="en")
 	head
-		title MIC Conference Travel Form - Submitted
+		title MIC Conference Sponsor Form - Submitted
 		meta(name="viewport" content="width=device-width")
 		link(rel="stylesheet" href="stylesheets/style.css")
 		link(rel="stylesheet" href="stylesheets/mobile.css")
