--- a/mic-site/views/travel-form/travel-form.pug
+++ b/mic-site/views/travel-form/travel-form.pug
@@ -5,7 +5,7 @@ html(lang="en")
 		link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO' crossorigin='anonymous')
 		link(rel="stylesheet" href="stylesheets/style.css")
 		link(rel="stylesheet" href="stylesheets/mobile.css")
-		link(rel="stylesheet" href="stylesheets/travel-form.css")
+		link(rel="stylesheet" href="stylesheets/form.css")
 	body
 		header
 			a(href="/")
