--- a/mic-site/views/acceptance-form/acceptance-form.pug
+++ b/mic-site/views/acceptance-form/acceptance-form.pug
@@ -15,7 +15,7 @@ html(lang="en")
 			form#acceptance-form(method="POST" action="/acceptance-form")
 				.form-group
 					label(for='email') Email*
-					input#email.form-control(type='email' placeholder="Please make sure this matches your original application" name="email_address" required="" value=email)
+					input#email.form-control(type='email' placeholder="Please use your school email" name="email_address" required="" value=email)
 				.form-group
 					label(for='first-name') First Name*
 					input#first-name.form-control(type='text' placeholder="" name="first_name" required="")
