--- a/mic-site/views/acceptance-form/completed.pug
+++ b/mic-site/views/acceptance-form/completed.pug
@@ -10,6 +10,6 @@ html(lang="en")
 			a(href="/")
 				img(src="images/mic-logo.png" alt="MIC Logo")
 		main
-			p(style="text-align:center") The form has been submitted. Can't wait to see you at the conference! Feel free to reach out to 
+			p(style="text-align:center") The form has been submitted. Can't wait to see you at the conference! Make sure to follow us on twitter <a href="https://twitter.com/mic_conf?lang=en">@mic_conf</a> for updates. Feel free to reach out to 
 				a(href="mailto:conference@machineintelligence.cc") conference@machineintelligence.cc 
 				| if you have any questions or concerns.
