--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -31,7 +31,9 @@ html(lang="en")
 							.main-heading
 								h1 Machine Intelligence Conference
 							.sub-heading
-								h2 Nov. 3rd, 2018 - 6th Floor of MIT Media Lab
+								h2 Nov. 3rd, 2018 - 6th Floor of MIT Media Lab	
+					.cta
+						a.cta-button(href="/schedule") View the Schedule
 			section#about
 				.container
 					.section-head
