Updated sponsor logos

--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -124,7 +124,7 @@ html(lang="en")
 								img.tier-one(src="images/sponsors/malong-technologies-logo.png" alt="Malong Technologies Logo")
 						.sponsor-tile
 							a(href="https://www.intel.com/" target="_blank" rel="noopener noreferrer")
-								img.tier-one(src="images/sponsors/intel-logo.png" alt="Intel Logo")
+								img.tier-one(src="images/sponsors/intel-ai-logo.png" alt="Intel Logo")
 						.sponsor-tile
 							a(href="http://www.nvidia.com/" target="_blank" rel="noopener noreferrer")
 								img.tier-two(src="images/sponsors/nvidia-logo.jpg" alt="Nvidia Logo")
@@ -134,6 +134,9 @@ html(lang="en")
 						.sponsor-tile
 							a(href="https://www.cra.com/" target="_blank" rel="noopener noreferrer")
 								img.tier-three(src="images/sponsors/charles-river-analytics-logo.png" alt="Charles River Analytics Logo")
+						.sponsor-tile
+							a(href="https://www.amazon.com/" target="_blank" rel="noopener noreferrer")
+								img.tier-three(src="images/sponsors/amazon-logo.jpg" alt="Amazon Logo")
 					.become-sponsor
 						a.cta-button(href="mailto:sponsors@machineintelligence.cc") Become A Sponsor
 			section#committee
