--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -147,13 +147,13 @@ html(lang="en")
 						.left
 							.members
 								.title Head Coordinators
-								.names Justin Chen, Ajay Jain
+								.names Justin Chen, Ajay Jain, Nikhil Murthy
 							.member
 								.title Workshop Coordinator and Community Outreach
 								.name Dan Pechi
 							.member
 								.title Panel Coordinator
-								.name Nikhil Murthy, Mirac Suzgun
+								.name Mirac Suzgun
 							.member
 								.title Website Coordinator
 								.name Devin de Hueck
