--- a/mic-site/views/schedule.pug
+++ b/mic-site/views/schedule.pug
@@ -33,7 +33,7 @@ html(lang="en")
 						p.title=event.title
 						if event.speaker
 							if event.speaker_id
-								- var speakerlink = '/speakers/' + event.speaker_id.replace('_', '-');
+								- var speakerlink = '/speakers/' + event.speaker_id.replace(/_/g, '-');
 								a(href=speakerlink) #{event.speaker}
 							else
 								p=event.speaker
